fixing css for steps overflow and changing color scheme of the app to match the logo

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -15,7 +15,7 @@ code {
 #root{
   height: 100vh;
   width: 100vw;
-  background-color: #161E31;
+  background-color: black;
 }
 
 #app{
